feat:添加单例设计模式