@@ -77,7 +77,7 @@ class ReadXML1 {
             System.out.println("新类名："+cName);
             // 通过类名生成实例对象并将其返回
             Class<?> c = Class.forName(cName);
-            Object obj = c.newInstance();
+            Object obj = c.getDeclaredConstructor().newInstance();;
             return obj;
         } catch (Exception e) {
             e.printStackTrace();
